--- a/public/content/20-o-que-ja-sei-sobre-mim/index.html
+++ b/public/content/20-o-que-ja-sei-sobre-mim/index.html
@@ -49,6 +49,21 @@
                         <template data-question-id-42 class="be-text-purple"></template>
                         <template data-question-id-43 class="be-text-purple"></template>
                         <template data-question-id-44 class="be-text-purple"></template>
+                        <div id="form-scorm" class="col s12 hide">
+                            <div class='input-field col s12'>  
+                                <label for='field-42'>Descoberta 1</label>  
+                                <textarea data-scorm-mode-on class='materialize-textarea' name='field-42' data-type="1" id='field-42'></textarea>  
+                            </div>
+                            <div class='input-field col s12'>  
+                                <label for='field-43'>Descoberta 2</label>  
+                                <textarea data-scorm-mode-on class='materialize-textarea' name='field-43' data-type="1" id='field-43'></textarea> 
+                            </div>
+                            <div class='input-field col s12'> 
+                                <label for='field-44'>Descoberta 3</label>  
+                                <textarea data-scorm-mode-on class='materialize-textarea' name='field-44' data-type="1" id='field-44'></textarea>  
+                            </div>
+                        </div>
+
                         <div class="action-send-form input-field col s12">
                             <button id="btnSend" class="btn" type="submit" onclick="pluginComponentFormJS.sendForm(event);">Gravar dados</button>
                             <button id="btnEdit" class="btn hide" type="button" onclick="pluginComponentFormJS.editForm(event);">Editar</button>
