Adaptacao content para scorm-mode - o olhar do outro sobre mim

--- a/public/content/21-o-olhar-do-outro-sobre-mim/index.html
+++ b/public/content/21-o-olhar-do-outro-sobre-mim/index.html
@@ -43,6 +43,20 @@
                         <template data-question-id-45></template>
                         <template data-question-id-46></template>
                         <template data-question-id-47></template>
+                        <div id="form-scorm1" class="col s12 hide">
+                            <div class='input-field col s12'>  
+                                <label for='field-45'>Comentário 1</label>
+                                <textarea data-scorm-mode-on class='materialize-textarea' name='field-45' data-type="1" id='field-45'></textarea>
+                            </div>
+                            <div class='input-field col s12'>  
+                                <label for='field-46'>Comentário 2</label>  
+                                <textarea data-scorm-mode-on class='materialize-textarea' name='field-46' data-type="1" id='field-46'></textarea>  
+                            </div>
+                            <div class='input-field col s12'>  
+                                <label for='field-47'>Comentário 3</label>  
+                                <textarea data-scorm-mode-on class='materialize-textarea' name='field-47' data-type="1" id='field-47'></textarea>
+                            </div>
+                        </div>
                         <div class="col s12">
                             <p class="m-0">Agora, adicione os pontos fortes citados nos comentários que você selecionou:<br>
                                 <small class="be-text-gray">Ex.:
@@ -53,6 +67,16 @@
                         </div>
                         <template data-question-id-48></template>
                         <template data-question-id-49></template>
+                        <div id="form-scorm2" class="col s12 hide">
+                            <div class='input-field col s12'>  
+                                <label for='field-48'>Ponto forte 1</label>  
+                                <textarea data-scorm-mode-on class='materialize-textarea' name='field-48' data-type="1" id='field-48'></textarea> 
+                            </div>
+                            <div class='input-field col s12'>  
+                                <label for='field-49'>Ponto forte 2</label>  
+                                <textarea data-scorm-mode-on class='materialize-textarea' name='field-49' data-type="1" id='field-49'></textarea>  
+                            </div>
+                        </div>
                         <div class="col s12">
                             <p class="m-0">O próximo passo é buscar em sua memória críticas que tenha recebido do seu gestor, dos seus pares, de clientes etc (caso tenha registro também pode utilizar). <br>
                                 <small class="be-text-gray">Pode também buscar feedbacks recebidos em casa, dos seus pais, irmãos, parceiro/a etc.<br>
@@ -64,6 +88,20 @@
                         <template data-question-id-50></template>
                         <template data-question-id-51></template>
                         <template data-question-id-52></template>
+                        <div id="form-scorm3" class="col s12 hide">
+                            <div class='input-field col s12'>  
+                                <label for='field-50'>Feedback 1</label>  
+                                <textarea data-scorm-mode-on class='materialize-textarea' name='field-50' data-type="1" id='field-50'></textarea>  
+                            </div>
+                            <div class='input-field col s12'>  
+                                <label for='field-51'>Feedback 2</label>  
+                                <textarea data-scorm-mode-on class='materialize-textarea' name='field-51' data-type="1" id='field-51'></textarea>  
+                            </div>
+                            <div class='input-field col s12'>  
+                                <label for='field-52'>Feedback 3</label>  
+                                <textarea data-scorm-mode-on class='materialize-textarea' name='field-52' data-type="1" id='field-52'></textarea>  
+                            </div>
+                        </div>
                         <div class="col s12">
                             <p class="m-0">Pergunte às pessoas próximas, preferencialmente do trabalho, quais são as principais características que reconhecem em você.<br>
                                 <small class="be-text-gray">Peça exemplos de situações nas quais a pessoa viu a característica "em ação".<br>
@@ -76,6 +114,24 @@
                         <template data-question-id-54></template>
                         <template data-question-id-55></template>
                         <template data-question-id-56></template>
+                        <div id="form-scorm4" class="col s12 hide">
+                            <div class='input-field col s12'>  
+                                <label for='field-53'>Característica 1</label>  
+                                <textarea data-scorm-mode-on class='materialize-textarea' name='field-53' data-type="1" id='field-53'></textarea> 
+                            </div>
+                            <div class='input-field col s12'>  
+                                <label for='field-54'>Característica 2</label>  
+                                <textarea data-scorm-mode-on class='materialize-textarea' name='field-54' data-type="1" id='field-54'></textarea> 
+                            </div>
+                            <div class='input-field col s12'>  
+                                <label for='field-55'>Característica 3</label>  
+                                <textarea data-scorm-mode-on class='materialize-textarea' name='field-55' data-type="1" id='field-55'></textarea> 
+                            </div>
+                            <div class='input-field col s12'>  
+                                <label for='field-56'>Como você resumiria em uma frase o olhar dos outros sobre você?</label>  
+                                <textarea data-scorm-mode-on class='materialize-textarea' name='field-56' data-type="1" id='field-56'></textarea>  
+                            </div>
+                        </div>
 
                         <div class="action-send-form input-field col s12">
                             <button id="btnSend" class="btn" type="submit" onclick="pluginComponentFormJS.sendForm(event);">Gravar dados</button>
