Adaptacao content para scorm-mode - meu olhar sobre quem eu sou

--- a/public/content/22-meu-olhar-sobre-quem-sou-eu/index.html
+++ b/public/content/22-meu-olhar-sobre-quem-sou-eu/index.html
@@ -59,6 +59,88 @@
                         <template data-question-id-70></template>
                         <template data-question-id-71></template>
                         <template data-question-id-72></template>
+                        <div id="form-scorm" class="col s12 hide">
+                            <div class='input-field col s12'>  
+                                <label for='field-57'>Como você tem se alimentado no seu dia a dia?</label>  
+                                <textarea data-scorm-mode-on class='materialize-textarea' name='field-57' data-type="1" id='field-57'></textarea>
+                            </div>
+                            <div class='input-field col s12'>  
+                                <label>Tem uma alimentação saudável?</label>  
+                                <select data-scorm-mode-on name='field-58' data-type="4">    
+                                    <option value='' selected>Selecione</option>    
+                                    <option value='Y' >Sim</option>    
+                                    <option value='N' >Não</option>  
+                                </select>  
+                            </div>
+                            <div class='input-field col s12'>  
+                                <label>Pratica exercícios físicos?</label>  
+                                <select data-scorm-mode-on name='field-59' data-type="4">    
+                                    <option value='' selected>Selecione</option>    
+                                    <option value='Y' >Sim</option>    
+                                    <option value='N' >Não</option>  
+                                </select>  
+                            </div>
+                            <div class='input-field col s12'>  
+                                <label>Tem hábitos de sono saudáveis?</label>  
+                                <select data-scorm-mode-on name='field-61' data-type="4">    
+                                    <option value='' selected>Selecione</option>    
+                                    <option value='Y' >Sim</option>    
+                                    <option value='N' >Não</option>  
+                                </select>  
+                            </div>
+                            <div class='input-field col s12'>  
+                                <label>Dorme bem e suficiente?</label>  
+                                <select data-scorm-mode-on name='field-62' data-type="4">    
+                                    <option value='' selected>Selecione</option>    
+                                    <option value='Y' >Sim</option>    
+                                    <option value='N' >Não</option>  
+                                </select>  
+                            </div>
+                            <div class='input-field col s12'>  
+                                <label for='field-63'>O que você tem feito para manter sua saúde física e seu corpo saudável?</label>  
+                                <textarea data-scorm-mode-on class='materialize-textarea' name='field-63' data-type="1" id='field-63'></textarea>  
+                            </div>
+                            <div class='input-field col s12'>  
+                                <label for='field-64'>Como você se sente a maior parte do tempo (feliz, triste, ansioso, animado, esperançoso, alegre, estressado etc)?</label>  
+                                <textarea data-scorm-mode-on class='materialize-textarea' name='field-64' data-type="1" id='field-64'></textarea>  
+                            </div>
+                            <div class='input-field col s12'>  
+                                <label>Você consegue perceber a emoção no momento em que está sentindo?</label>  
+                                <select data-scorm-mode-on name='field-65' data-type="4">    
+                                    <option value='' selected>Selecione</option>    
+                                    <option value='Y' >Sim</option>    
+                                    <option value='N' >Não</option>  
+                                </select>  
+                            </div>
+                            <div class='input-field col s12'>  
+                                <label for='field-66'>O que você costuma fazer para lidar com os seus sentimentos?</label>  
+                                <textarea data-scorm-mode-on class='materialize-textarea' name='field-66' data-type="1" id='field-66'></textarea>  
+                            </div>
+                            <div class='input-field col s12'>  
+                                <label for='field-67'>Qual é o seu jeito preferido de aprender algo novo?</label>  
+                                <textarea data-scorm-mode-on class='materialize-textarea' name='field-67' data-type="1" id='field-67'></textarea>  
+                            </div>
+                            <div class='input-field col s12'>  
+                                <label for='field-68'>Qual foi a última coisa que você aprendeu a fazer?</label>  
+                                <textarea data-scorm-mode-on class='materialize-textarea' name='field-68' data-type="1" id='field-68'></textarea> 
+                            </div>
+                            <div class='input-field col s12'>  
+                                <label for='field-69'>Qual foi o livro, filme ou série que mais te marcou? Por que?</label>  
+                                <textarea data-scorm-mode-on class='materialize-textarea' name='field-69' data-type="1" id='field-69'></textarea>  
+                            </div>
+                            <div class='input-field col s12'>  
+                                <label for='field-70'>Como está o seu amor por você mesmo, sua autoestima?</label>  
+                                <textarea data-scorm-mode-on class='materialize-textarea' name='field-70' data-type="1" id='field-70'></textarea>  
+                            </div>
+                            <div class='input-field col s12'>  
+                                <label for='field-71'>O que você tem feito para se conhecer melhor e se autodesenvolver?</label>  
+                                <textarea data-scorm-mode-on class='materialize-textarea' name='field-71' data-type="1" id='field-71'></textarea> 
+                            </div>
+                            <div class='input-field col s12'>  
+                                <label for='field-72'>O que você tem feito para entrar cada vez mais em contato com você mesmo?</label>  
+                                <textarea data-scorm-mode-on class='materialize-textarea' name='field-72' data-type="1" id='field-72'></textarea> 
+                            </div>
+                        </div>
 
                         <div class="action-send-form input-field col s12">
                             <button id="btnSend" class="btn" type="submit" onclick="pluginComponentFormJS.sendForm(event);">Gravar dados</button>
