Adaptacao content para scorm-mode - meu olhar sobre a minha historia

--- a/public/content/23-meu-olhar-sobre-a-minha-historia/index.html
+++ b/public/content/23-meu-olhar-sobre-a-minha-historia/index.html
@@ -48,6 +48,37 @@
                         <template data-question-id-77></template>
                         <template data-question-id-78></template>
                         <template data-question-id-79 class="large"></template>
+                        <div id="form-scorm" class="col s12 hide">
+                            <div class='input-field col s12'>  
+                                <label for='field-73'>Ao olhar para a linha da sua vida, do que você mais se orgulha? Por que?</label>  
+                                <textarea data-scorm-mode-on class='materialize-textarea' name='field-73' data-type="1" id='field-73'></textarea>  
+                            </div>
+                            <div class='input-field col s12'>  
+                                <label for='field-74'>Quais características mais te ajudaram na situação da qual você mais se orgulha?</label>  
+                                <textarea data-scorm-mode-on class='materialize-textarea' name='field-74' data-type="1" id='field-74'></textarea>  
+                            </div>
+                            <div class='input-field col s12'>  
+                                <label for='field-75'>Qual foi o seu principal aprendizado na situação da qual você mais se orgulha?</label>  
+                                <textarea data-scorm-mode-on class='materialize-textarea' name='field-75' data-type="1" id='field-75'></textarea>
+                            </div>
+                            <div class='input-field col s12'>  
+                                <label for='field-76'>Qual é o momento que você menos gosta na sua linha da vida? Por que?</label>  
+                                <textarea data-scorm-mode-on class='materialize-textarea' name='field-76' data-type="1" id='field-76'></textarea>  
+                            </div>
+                            <div class='input-field col s12'>  
+                                <label for='field-77'>Quais características te faltaram para lidar com a situação que você menos gosta?</label>  
+                                <textarea data-scorm-mode-on class='materialize-textarea' name='field-77' data-type="1" id='field-77'></textarea> 
+                            </div>
+                            <div class='input-field col s12'>  
+                                <label for='field-78'>Qual foi o seu principal aprendizado nesta situação que menos gosta?</label>  
+                                <textarea data-scorm-mode-on class='materialize-textarea' name='field-78' data-type="1" id='field-78'></textarea> 
+                            </div>
+                            <div class='input-field col s12'>  
+                                <label for='field-79'>Avançamos três anos no tempo e o seu ‘eu de hoje’ encontra o seu ‘eu do futuro’. O que o seu eu do futuro te diz?</label>  
+                                <textarea data-scorm-mode-on class='materialize-textarea' name='field-79' data-type="1" id='field-79'></textarea>  
+                            </div>
+
+                        </div>
 
                         <div class="action-send-form input-field col s12">
                             <button id="btnSend" class="btn" type="submit" onclick="pluginComponentFormJS.sendForm(event);">Gravar dados</button>
