Adaptacao content para scorm-mode - analise

--- a/public/content/24-analise/index.html
+++ b/public/content/24-analise/index.html
@@ -42,6 +42,24 @@
                         <template data-question-id-81></template>
                         <template data-question-id-82></template>
                         <template data-question-id-83 class="large"></template>
+                        <div id="form-scorm1" class="col s12 hide">
+                            <div class='input-field col s12'>  
+                                <label for='field-80'>Quando falo sobre mim mesmo eu sinto:</label>  
+                                <textarea data-scorm-mode-on class='materialize-textarea' name='field-80' data-type="1" id='field-80'></textarea> 
+                            </div>
+                            <div class='input-field col s12'>  
+                                <label for='field-81'>Eu tenho sido para mim mesmo:</label>  
+                                <textarea data-scorm-mode-on class='materialize-textarea' name='field-81' data-type="1" id='field-81'></textarea>  
+                            </div>
+                            <div class='input-field col s12'> 
+                                <label for='field-82'>O que de melhor eu tenho para oferecer é:</label>  
+                                <textarea data-scorm-mode-on class='materialize-textarea' name='field-82' data-type="1" id='field-82'></textarea>  
+                            </div>
+                            <div class='input-field col s12'>  
+                                <label for='field-83'>A coisa mais interessante que eu percebi/ descobri sobre mim ao fazer este mapeamento foi:</label>  
+                                <textarea data-scorm-mode-on class='materialize-textarea' name='field-83' data-type="1" id='field-83'></textarea>
+                            </div>
+                        </div>
                         <div class="col s12">
                             <p class="m-0 be-text-gray">
                                 Para a posição de gestor:<br>
@@ -49,6 +67,16 @@
                         </div>
                         <template data-question-id-84></template>
                         <template data-question-id-85></template>
+                        <div id="form-scorm2" class="col s12 hide">
+                            <div class='input-field col s12'>  
+                                <label for='field-84'>O que eu percebo que possuo como ponto forte é:</label>  
+                                <textarea data-scorm-mode-on class='materialize-textarea' name='field-84' data-type="1" id='field-84'></textarea>
+                            </div>
+                            <div class='input-field col s12'>  
+                                <label for='field-85'>O que eu percebo que posso aprimorar é:</label>  
+                                <textarea data-scorm-mode-on class='materialize-textarea' name='field-85' data-type="1" id='field-85'></textarea> 
+                            </div>
+                        </div>
 
                         <div class="action-send-form input-field col s12">
                             <button id="btnSend" class="btn" type="submit" onclick="pluginComponentFormJS.sendForm(event);">Gravar dados</button>
