Ajustes no public/contetn

--- a/public/content/22-meu-olhar-sobre-quem-sou-eu/index.html
+++ b/public/content/22-meu-olhar-sobre-quem-sou-eu/index.html
@@ -80,6 +80,27 @@
                                     <option value='N' >Não</option>  
                                 </select>  
                             </div>
+                            <div class='input-field col s12'>
+                                <p>Com que frequência?</p>
+                                <p class='radio'>
+                                    <label>
+                                        <input data-scorm-mode-on type='radio' name='field-60' data-type="3" value='1' >
+                                        <span>Diariamente</span>
+                                    </label>
+                                </p>
+                                <p class='radio'>
+                                    <label>
+                                        <input data-scorm-mode-on type='radio' name='field-60' data-type="3" value='2' >
+                                        <span>Semanalmente</span>
+                                    </label>
+                                </p>
+                                <p class='radio'>
+                                    <label>
+                                        <input data-scorm-mode-on type='radio' name='field-60' data-type="3" value='3' >
+                                        <span>De vez em quando, sem regularidade</span>
+                                    </label>
+                                </p>
+                            </div>
                             <div class='input-field col s12'>  
                                 <label>Tem hábitos de sono saudáveis?</label>  
                                 <select data-scorm-mode-on name='field-61' data-type="4">    
