Alteracoes legendas  na sessao Sobre gerir a si mesmo

--- a/public/content/19-sobre-gerir-a-si-mesmo/index.html
+++ b/public/content/19-sobre-gerir-a-si-mesmo/index.html
@@ -21,6 +21,13 @@
 
     <link rel="stylesheet" href="plyr/plyr.css">
     <script type="text/javascript" src="plyr/plyr.js"></script>
+    <style>
+        @media (min-width:1024px) {
+            .plyr_captions .plyr_caption {
+                font-size: 24px !important
+            }
+        }
+    </style>
 </head>
 <body>
     <main class="container mt-3">
@@ -28,13 +35,14 @@
             <div class="col s12">
                 <video id="player" playsinline controls>
                     <source src="sobre-gerir-a-si-mesmo.mp4" type="video/mp4" size="576" />
+                    <track kind="captions" label="Português" src="./Sobre-gerir-a-si-mesmo-pt-br.vtt" srclang="pt-BR" default />
                 </video>
                 <h1 class="center-align m-3">Gerir a si mesmo</h1>
             </div>
         </div>
     </main>
     <script>
-        new Plyr('#player');        
+        new Plyr('#player', {captions: {active: true}});        
     </script>
 </body>
 </html>
