Alteracao legendas na sessao Ansiedade e normose

--- a/public/content/27-ansiedade-e-normose/index.html
+++ b/public/content/27-ansiedade-e-normose/index.html
@@ -76,6 +76,13 @@
     <script src="jquery.min.js"></script>
     <script src="materialize.min.js"></script>
     <script src="materialize.min.js"></script>
+    <style>
+        @media (min-width:1024px) {
+            .plyr_captions .plyr_caption {
+                font-size: 24px !important
+            }
+        }
+    </style>
 </head>
 
 <body>
@@ -92,6 +99,7 @@
                 <div id="youtube_video_2" class="fr-widget fr-video fr-wf fr_youtube_video_2">
                     <video id="player" playsinline controls>
                         <source src="ansiedade-e-normose.mp4" type="video/mp4" size="576" />
+                        <track kind="captions" label="Português" src="./Ansiedade-e-Normose-pt-br.vtt" srclang="pt-BR" default />
                     </video>
                 </div>
             </div>
@@ -162,7 +170,7 @@
     <div id="footer-assets">
     </div>
     <script>
-        new Plyr('#player');        
+        new Plyr('#player', {captions: {active: true}});        
     </script>
 </body>
 
